Project_Test/Tests/test_22/testOutput.txt
./Project_Test/XV6_Tests/trntree1.c: In function ‘initiateMutexTest’:
./Project_Test/XV6_Tests/trntree1.c:25:6: error: unknown type name ‘trnmnt_tree’
      trnmnt_tree* tree;
      ^
./Project_Test/XV6_Tests/trntree1.c:27:10: warning: assignment from incompatible pointer type [-Wincompatible-pointer-types]
     tree = trnmnt_tree_alloc(1); 
          ^
./Project_Test/XV6_Tests/trntree1.c:32:34: warning: passing argument 1 of ‘trnmnt_tree_dealloc’ from incompatible pointer type [-Wincompatible-pointer-types]
     result = trnmnt_tree_dealloc(tree); 
                                  ^
In file included from ./Project_Test/XV6_Tests/trntree1.c:11:0:
./Project_Test/XV6_Tests/../../kthread.h:18:5: note: expected ‘struct trnmnt_tree *’ but argument is of type ‘int *’
 int trnmnt_tree_dealloc(struct trnmnt_tree* tree);
     ^
./Project_Test/XV6_Tests/trntree1.c:41:10: warning: assignment from incompatible pointer type [-Wincompatible-pointer-types]
     tree = trnmnt_tree_alloc(2); 
          ^
./Project_Test/XV6_Tests/trntree1.c:46:34: warning: passing argument 1 of ‘trnmnt_tree_dealloc’ from incompatible pointer type [-Wincompatible-pointer-types]
     result = trnmnt_tree_dealloc(tree); 
                                  ^
In file included from ./Project_Test/XV6_Tests/trntree1.c:11:0:
./Project_Test/XV6_Tests/../../kthread.h:18:5: note: expected ‘struct trnmnt_tree *’ but argument is of type ‘int *’
 int trnmnt_tree_dealloc(struct trnmnt_tree* tree);
     ^
./Project_Test/XV6_Tests/trntree1.c:55:10: warning: assignment from incompatible pointer type [-Wincompatible-pointer-types]
     tree = trnmnt_tree_alloc(3); 
          ^
./Project_Test/XV6_Tests/trntree1.c:60:34: warning: passing argument 1 of ‘trnmnt_tree_dealloc’ from incompatible pointer type [-Wincompatible-pointer-types]
     result = trnmnt_tree_dealloc(tree); 
                                  ^
In file included from ./Project_Test/XV6_Tests/trntree1.c:11:0:
./Project_Test/XV6_Tests/../../kthread.h:18:5: note: expected ‘struct trnmnt_tree *’ but argument is of type ‘int *’
 int trnmnt_tree_dealloc(struct trnmnt_tree* tree);
     ^
./Project_Test/XV6_Tests/trntree1.c:69:10: warning: assignment from incompatible pointer type [-Wincompatible-pointer-types]
     tree = trnmnt_tree_alloc(4); 
          ^
./Project_Test/XV6_Tests/trntree1.c:74:34: warning: passing argument 1 of ‘trnmnt_tree_dealloc’ from incompatible pointer type [-Wincompatible-pointer-types]
     result = trnmnt_tree_dealloc(tree); 
                                  ^
In file included from ./Project_Test/XV6_Tests/trntree1.c:11:0:
./Project_Test/XV6_Tests/../../kthread.h:18:5: note: expected ‘struct trnmnt_tree *’ but argument is of type ‘int *’
 int trnmnt_tree_dealloc(struct trnmnt_tree* tree);
     ^
./Project_Test/XV6_Tests/trntree1.c:83:10: warning: assignment from incompatible pointer type [-Wincompatible-pointer-types]
     tree = trnmnt_tree_alloc(5); 
          ^
./Project_Test/XV6_Tests/trntree1.c:88:34: warning: passing argument 1 of ‘trnmnt_tree_dealloc’ from incompatible pointer type [-Wincompatible-pointer-types]
     result = trnmnt_tree_dealloc(tree); 
                                  ^
In file included from ./Project_Test/XV6_Tests/trntree1.c:11:0:
./Project_Test/XV6_Tests/../../kthread.h:18:5: note: expected ‘struct trnmnt_tree *’ but argument is of type ‘int *’
 int trnmnt_tree_dealloc(struct trnmnt_tree* tree);
     ^
Project_Test/Tests/test_22/Makefile:286: recipe for target '_trntree1' failed
make[1]: *** [_trntree1] Error 1
